# DummyCMakeProject

./: CMakeLists.txt
lib/: CMakeLists.txt  sayHi.cpp  sayHi.h
src/: CMakeLists.txt  main.cpp
